parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> opt_stmts
Rule 2     opt_stmts -> statement_list
Rule 3     opt_stmts -> null
Rule 4     null -> <empty>
Rule 5     statement_list -> statement_list statement
Rule 6     statement_list -> statement
Rule 7     statement -> number
Rule 8     number -> NUMBER

Terminals, with rules where they appear

NUMBER               : 8
error                : 

Nonterminals, with rules where they appear

null                 : 3
number               : 7
opt_stmts            : 1
program              : 0
statement            : 5 6
statement_list       : 2 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . opt_stmts
    (2) opt_stmts -> . statement_list
    (3) opt_stmts -> . null
    (5) statement_list -> . statement_list statement
    (6) statement_list -> . statement
    (4) null -> .
    (7) statement -> . number
    (8) number -> . NUMBER

    $end            reduce using rule 4 (null -> .)
    NUMBER          shift and go to state 7

    program                        shift and go to state 1
    opt_stmts                      shift and go to state 2
    statement_list                 shift and go to state 3
    null                           shift and go to state 4
    statement                      shift and go to state 5
    number                         shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> opt_stmts .

    $end            reduce using rule 1 (program -> opt_stmts .)


state 3

    (2) opt_stmts -> statement_list .
    (5) statement_list -> statement_list . statement
    (7) statement -> . number
    (8) number -> . NUMBER

    $end            reduce using rule 2 (opt_stmts -> statement_list .)
    NUMBER          shift and go to state 7

    statement                      shift and go to state 8
    number                         shift and go to state 6

state 4

    (3) opt_stmts -> null .

    $end            reduce using rule 3 (opt_stmts -> null .)


state 5

    (6) statement_list -> statement .

    NUMBER          reduce using rule 6 (statement_list -> statement .)
    $end            reduce using rule 6 (statement_list -> statement .)


state 6

    (7) statement -> number .

    NUMBER          reduce using rule 7 (statement -> number .)
    $end            reduce using rule 7 (statement -> number .)


state 7

    (8) number -> NUMBER .

    NUMBER          reduce using rule 8 (number -> NUMBER .)
    $end            reduce using rule 8 (number -> NUMBER .)


state 8

    (5) statement_list -> statement_list statement .

    NUMBER          reduce using rule 5 (statement_list -> statement_list statement .)
    $end            reduce using rule 5 (statement_list -> statement_list statement .)

